Mon Oct 28 19:19:49 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: lots of cleanups. Temporarily remove the debug stuff.
	Add checks for getaddrinfo and getnameinfo and a configure. Better
	zlib check.
	* Makefile.am (CFLAGS): removed definition.
	* src/Makefile.am (CFLAGS): removed definition.
	(gnome_mud_LDADD): add $(Z_LIBS).

Mon Oct 28 17:09:16 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: change contact info for Abigail, per request.

Wed Sep 11 00:36:44 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/net.c: Patch from Sjoerd Simons <sjoerd@beast.luon.net>
	which adds IPv6 support.  Woohoo!

	* ROADMAP: added IPv6 to 0.10.
	* NEWS: add 0.10.0 items.

Thu Aug  1 16:41:01 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* Move to autoconf 2.50.

	* configure.in: renamed to configure.ac.
	* configure.ac: changes for autoconf 2.52, and remove some old
	stuff.
	* acclocal.h: removed, included templates in configure.ac.
	* autogen.sh: fail if one command returns error.

Tue Jul 30 10:59:36 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/Makevars: set Copyright holder to Robin.

Sat Jul  6 02:07:31 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/python.c (python_init): changed search path of python modules
	to "~/.gnome-mud/plugins/".

Wed Jul  3 17:20:32 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* Upgraded to gettext 0.11.2.

	* Makefile.am (SUBDIRS): Added macros.
	(SUBDIRS): Removed intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Added config.rpath.
	* configure.in (AC_OUTPUT): Added macros/Makefile.
	(AC_OUTPUT): Removed intl/Makefile.

Wed Jul  3 14:51:16 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: removed man_MANS, trimmed down EXTRA_DIST.
	* configure.in: defined LSMDATE, bumped release number.
	* gnome-mud.lsm.in: New template, replacing gnome-mud.lsm.
	* gnome-mud.1: moved to doc/gnome-mud.6.

	* doc/Makefile.am: man_MANS = gnome-mud.6.
